refactor/style: code cleanup, since upgrade to java 8